# smart-surveillance-sorter

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  classification_results.json  classification_results2.json  classification_results3.json  classification_results4.json  clip_engine.py  clipblip.py  clipblip2.py  clipblip3.py  confronta.py  confrontami.py  confrontami2.py  confrontiverita.py  filter_requirements.py  ground_truth.json  ground_truth19feb.json  install.bat  install.sh  install_it.bat  install_it.sh  pyproject.toml  readme.md  readme_it.md  readme_old.md  req.txt  requirements.txt  requirements_old.txt  risultati_finali_clipblip2.json  risultati_finali_clipblip3.json  risultati_finali_clipbliptrue.json  run.bat  run.sh  test.py  verify_install.py  verita.py  yolo_detailed_log.jsonl  (+1 more)
config/: cameras.json  clip_blip_settings.json  coords_cache.json  prompts.json  settings.json  settings_backup.json  settings_default.json
docs/: benchmarks-index.md  blip-clip-config.md  cameras-config.md  cli-usage.md  edge-cases.md  gpu-setup-amd.md  how-works-it.md  how-works.md  lens-health.md  manual-install.md  mode-compare.md  mode-comparison.md  model-comparison.md  realtime-resume.md  testing-guide.md  tuning-guide.md  webui.md  yolo-model-comparison.md  yolo-tuning.md
docs/api/: index.html  search.js  smart_surveillance_sorter.html
src/smart_surveillance_sorter/: clip.py  clipblip4.py  compare_results.py  compare_results_old.py  constants.py  copycompare.py  file_sorter.py  file_utils.py  generate_ground_truth.py  gui.py  log_config.py  logger.py  main.py  (+9 more)
(+30 files in other folders)
